Fixed font-sizing issue with table when embedded in iframe behind proxy.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,6 +67,11 @@ body {
   padding-top: 20px;
 }
 
+table {
+  /* Weirdly needed when dashboard is embedded in iframe behind proxy */
+  font-size: 13px;
+}
+
 table.table th {
   vertical-align: top;
 }
